--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@ a:hover{color:#0F0;cursor:pointer;text-decoration:none;}
 <img src="https://raw.githubusercontent.com/MCcubeAge/MCcubeAge.github.io/main/_/logo.png" class="logo"/>
 <div id="content">
 <h2>CubeAge</h2>
-CubeAge это качественый сервер майнкрафт, с множеством функций!
+CubeAge это качественый сервер майнкрафт, с множеством функций!<P>
 Вы можете:
-<i>Создавать КЛАНЫ</i>
-<i>Строить ДОМА</i>
-<i>После покупки доната вы сможете РОЗДАВАТЬ ДОНАТ</i>
-И многое другое!
+<i>Создавать КЛАНЫ</i><P>
+<i>Строить ДОМА</i><P>
+<i>После покупки доната вы сможете РОЗДАВАТЬ ДОНАТ</i><P>
+И многое другое!<P>
 <h2>Информация</h2>
-Сервер доступен с версий 1.9+ до 1.12+
-<i>Приметка: Рекомендируем использовать версию 1.12.2</i>
-Айпи: IPserverVanilla.tk:26060
+Сервер доступен с версий 1.9+ до 1.12+<P>
+<i>Приметка: Рекомендируем использовать версию 1.12.2</i><P>
+Айпи: IPserverVanilla.tk:26060<P>
 </div>
 <img src="https://raw.githubusercontent.com/MCcubeAge/MCcubeAge.github.io/main/_/problems.png" class="logo"/>
 <div id="content">
 <h2>Немогу зайти!</h2>
-Попробуйте установить версию 1.12.2
-Если не помогло то попробуйте зайти по этому айпи: 65.21.9.195:26060
-Если не помогло, напишите в ДИСКОРД: https://discord.gg/4nv4qzqGhv
+Попробуйте установить версию 1.12.2<P>
+Если не помогло то попробуйте зайти по этому айпи: 65.21.9.195:26060<P>
+Если не помогло, напишите в ДИСКОРД: <a target="_blank" href="https://discord.gg/4nv4qzqGhv">https://discord.gg/4nv4qzqGhv</a></br><p>
 <h2>Ошибка Unklow host</h2>
-Проверьте айпи!
-Если не помогло зайдите оп этому 65.21.9.195:26060
+Проверьте айпи!<P>
+Если не помогло зайдите оп этому 65.21.9.195:26060<P>
 <h2>Сервер логает!</h2>
-Проверьте или установите версию 1.12.2
-Если все в порядке установите OptiFine!
+Проверьте или установите версию 1.12.2<P>
+Если все в порядке установите OptiFine!<P>
 </div>
 </div>
 <div>
