--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ a:hover{color:#0F0;cursor:pointer;text-decoration:none;}
 <div id="content">
 <h2>CubeAge</h2>
 CubeAge это качественый сервер майнкрафт, с множеством функций!<P>
-Вы можете:
+Вы можете:<p>
 <i>Создавать КЛАНЫ</i><P>
 <i>Строить ДОМА</i><P>
 <i>После покупки доната вы сможете РОЗДАВАТЬ ДОНАТ</i><P>
