--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ CubeAge это качественый сервер майнкрафт, с мно
 Если не помогло, напишите в ДИСКОРД: <a target="_blank" href="https://discord.gg/4nv4qzqGhv">https://discord.gg/4nv4qzqGhv</a></br><p>
 <h2>Ошибка Unklow host</h2>
 Проверьте айпи!<P>
-Если не помогло зайдите оп этому 65.21.9.195:26060<P>
+Если не помогло зайдите по этому айпи: 65.21.9.195:26060<P>
 <h2>Сервер логает!</h2>
 Проверьте или установите версию 1.12.2<P>
 Если все в порядке установите OptiFine!<P>
