--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@ CubeAge это качественый сервер майнкрафт, с мно
 Вы можете:<p>
 <i>Создавать КЛАНЫ</i><P>
 <i>Строить ДОМА</i><P>
-<i>После покупки доната вы сможете РОЗДАВАТЬ ДОНАТ</i><P>
+<i>РАЗВИВАТСЯ</i><P>
 И многое другое!<P>
 <h2>Информация</h2>
 Сервер доступен с версий 1.9+ до 1.12+<P>
 <i>Приметка: Рекомендируем использовать версию 1.12.2</i><P>
 Айпи: IPserverVanilla.tk:26060<P>
+Сервер ДИСКОРД: <a target="_blank" href="https://discord.gg/4nv4qzqGhv">https://discord.gg/4nv4qzqGhv</a></br><p>
 </div>
 <img src="https://raw.githubusercontent.com/MCcubeAge/MCcubeAge.github.io/main/_/problems.png" class="logo"/>
 <div id="content">
