--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ CubeAge это качественый сервер майнкрафт, с мно
 <i>Приметка: Рекомендируем использовать версию 1.12.2</i><P>
 Айпи: IPserverVanilla.tk:26060<P>
 Сервер ДИСКОРД: <a target="_blank" href="https://discord.gg/4nv4qzqGhv">https://discord.gg/4nv4qzqGhv</a></br><p>
+Сайт покупки ДОНАТА: <a target="_blank" href="https://mc-cubeagedonate.trademc.org">https://mc-cubeagedonate.trademc.org</a></br><p>
 </div>
 <img src="https://raw.githubusercontent.com/MCcubeAge/MCcubeAge.github.io/main/_/problems.png" class="logo"/>
 <div id="content">
