--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ a:hover{color:#0F0;cursor:pointer;text-decoration:none;}
 .logo{margin:0 25px;}
 </style>
 
+<link rel="shortcut icon" href="https://raw.githubusercontent.com/MCcubeAge/MCcubeAge.github.io/main/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
