--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ a:hover{color:#0F0;cursor:pointer;text-decoration:none;}
 </head>
 
 <body>
+<div>
+<h2><a target="_blank" href="https://mc-cubeagedonate.trademc.org">Донат</a></br></h2><p>
+</div>
 <div id="container">
 <img src="https://raw.githubusercontent.com/MCcubeAge/MCcubeAge.github.io/main/_/logo.png" class="logo"/>
 <div id="content">
