--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ a:hover{color:#0F0;cursor:pointer;text-decoration:none;}
 
 <body>
 <div>
-<h2><i><a href="https://MCcubeage.github.io/index.html">Главная</a></i> <a target="_blank" href="https://MC-cubeagedonate.trademc.ru">Донат</a></br> <a href="https://mcCubeage.github.io/rules.html">Правила</a></h2><p>
+<h2><i><a href="https://MCcubeage.github.io/index.html">Главная</a></i> <a href="https://MC-cubeageDonate.trademc.ru">Донат</a> <a href="https://mcCubeage.github.io/rules.html">Правила</a></h2><p>
 </div>
 <div id="container">
 <img src="https://raw.githubusercontent.com/MCcubeAge/MCcubeAge.github.io/main/_/logo.png" class="logo"/>
