--- a/rules.html
+++ b/rules.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Правила CubeAge</title>
+<title>CubeAge: Правила</title>
 
 <style>
 body{background-color:#E6E6E6;}
