--- a/rules.html
+++ b/rules.html
@@ -30,14 +30,14 @@ a:hover{color:#0F0;cursor:pointer;text-decoration:none;}
 <i>1. ЧАТ</i><p>
 1.1 злоупотребления матами ЗАПРЕЩЕНО<p>
 1.2 оскорбления администрации ЗАПРЕЩЕНО<p>
-1.3 оскорбления игроков ЗАПРЕЩЕНО
-1.4 спам ЗАПРЕЩЕНО
-1.5 флуд ЗАПРЕЩЕНО
-1.6 любой пиар ЗАПРЕЩЕНО
-1.7 попрошайнечество ЗАПРЕЩЕНО
+1.3 оскорбления игроков ЗАПРЕЩЕНО<p>
+1.4 спам ЗАПРЕЩЕНО<p>
+1.5 флуд ЗАПРЕЩЕНО<p>
+1.6 любой пиар ЗАПРЕЩЕНО<p>
+1.7 попрошайнечество ЗАПРЕЩЕНО<p>
 <p>
-<i>2. ИГРОВОЙ МИР И РЕГИОНЫ</i>
-2.1 гриферство ЗАПРЕЩЕНО
+<i>2. ИГРОВОЙ МИР И РЕГИОНЫ</i><p>
+2.1 гриферство ЗАПРЕЩЕНО<p>
 2.2 убивать игроков в СВОЁМ рг с pvp deny ЗАПРЕЩЕНО<p>
 2.3 находится в регионе если владелец просит вас уйти(кроме спавна) ЗАПРЕЩЕНО<p>
 2.4 крашить спавн или другой регион СТРОГО ЗАПРЕЩЕНО<p>
