--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@ CubeAge это качественый сервер майнкрафт, с мно
 </div>
 </div>
 <div>
-(c) 2021    <a target="_blank" href="https://MCcubeage.github.io/README.md">CubeAge</a></br> 
+(c) 2021    <a target="_blank" href="https://MCcubeage.github.io/README.md">CubeAge</a></br>
+<a href="/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=1"/></a>
+<a href="/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=2"/></a>
 </div>
 </body>
 </html>
