--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ CubeAge это качественый сервер майнкрафт, с мно
 </div>
 </div>
 <div>
-(c) 2021    <a target="_blank" href="https://MCcubeage.github.io/README.md">CubeAge</a>
+(c) 2021    <a target="_blank" href="https://MCcubeage.github.io/README.md">CubeAge</a><p>
 <a href="https://tmonitoring.com/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=2"/></a>
 </div>
 </body>
