--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CubeAge: Главная</title>
+<title>CubeAge:: Главная</title>
 
 <style>
 body{background-color:#E6E6E6;}
@@ -19,7 +19,7 @@ a:hover{color:#0F0;cursor:pointer;text-decoration:none;}
 
 <body>
 <div>
-<h2><i><a href="https://MCcubeage.github.io/index.html">Главная</a></i> <a href="https://MC-cubeageDonate.trademc.ru">Донат</a> <a href="https://mcCubeage.github.io/rules.html">Правила</a></h2>
+<h2><i><a href="https://MCcubeage.github.io/index.html">Главная</a></i> <a href="https://MC-cubeageDonate.trademc.org">Донат</a> <a href="https://mcCubeage.github.io/rules.html">Правила</a></h2>
 </div>
 <div id="container">
 <img src="https://raw.githubusercontent.com/MCcubeAge/MCcubeAge.github.io/main/_/logo.png" class="logo"/>
@@ -43,18 +43,18 @@ CubeAge это качественый сервер майнкрафт, с мно
 <h2>Немогу зайти!</h2>
 Попробуйте установить версию 1.12.2<P>
 Если не помогло то попробуйте зайти по этому айпи: 65.21.9.195:26060<P>
-Если не помогло, напишите в ДИСКОРД: <a target="_blank" href="https://discord.gg/4nv4qzqGhv">https://discord.gg/4nv4qzqGhv</a></br><p>
+Если и это не помогло, напишите в ДИСКОРД: <a target="_blank" href="https://discord.gg/4nv4qzqGhv">https://discord.gg/4nv4qzqGhv</a></br><p>
 <h2>Ошибка Unklow host</h2>
 Проверьте айпи!<P>
 Если не помогло зайдите по этому айпи: 65.21.9.195:26060<P>
+Если и это не помогло, напишите в ДИСКОРД: <a target="_blank" href="https://discord.gg/4nv4qzqGhv">https://discord.gg/4nv4qzqGhv</a></br><p>
 <h2>Сервер логает!</h2>
-Проверьте или установите версию 1.12.2<P>
+Проверьте установите версию 1.12.2<P>
 Если все в порядке установите OptiFine!<P>
 </div>
 </div>
 <div>
-(c) 2021    <a target="_blank" href="https://MCcubeage.github.io/README.md">CubeAge</a><p>
-<a href="https://tmonitoring.com/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=2"/></a>
+(c) 2021    <a target="_blank" href="https://MCcubeage.github.io/README.md">CubeAge</a>                                                       <a href="https://tmonitoring.com/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=2"/></a>
 </div>
 </body>
 </html>
