--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ CubeAge это качественый сервер майнкрафт, с мно
 </div>
 </div>
 <div>
-(c) 2021    <a target="_blank" href="https://MCcubeage.github.io/README.md">CubeAge</a>                                                       <a href="https://tmonitoring.com/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=2"/></a>
+<a href="https://tmonitoring.com/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=2"/></a>
+(c) 2021
 </div>
 </body>
 </html>
