--- a/rules.html
+++ b/rules.html
@@ -67,7 +67,8 @@ a:hover{color:#0F0;cursor:pointer;text-decoration:none;}
 </div>
 </div>
 <div>
-(c) 2021    <a target="_blank" href="https://MCcubeAge.github.io/README.md">CubeAge</a></br> 
+<a href="https://tmonitoring.com/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=2"/></a>
+(c) 2021
 </div>
 </body>
 </html>
