--- a/rules.html
+++ b/rules.html
@@ -67,7 +67,7 @@ a:hover{color:#0F0;cursor:pointer;text-decoration:none;}
 </div>
 </div>
 <div>
-<a href="https://tmonitoring.com/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=2"/></a>
+<a href="https://tmonitoring.com/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=2"/></a><p>
 (c) 2021
 </div>
 </body>
