--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ CubeAge это качественый сервер майнкрафт, с мно
 </div>
 </div>
 <div>
-<a href="https://tmonitoring.com/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=2"/></a>
+<a href="https://tmonitoring.com/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=2"/></a><p>
 (c) 2021
 </div>
 </body>
