--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ CubeAge это качественый сервер майнкрафт, с мно
 <h2>Информация</h2>
 Сервер доступен с версий 1.9+ до 1.12+<P>
 <i>Приметка: Рекомендируем использовать версию 1.12.2</i><P>
-Айпи: IPserverVanilla.tk:26060<P>
+Айпи: cubeage.tk:26060<P>
 Сервер ДИСКОРД: <a target="_blank" href="https://discord.gg/4nv4qzqGhv">https://discord.gg/4nv4qzqGhv</a></br><p>
 Сайт покупки ДОНАТА: <a target="_blank" href="https://mc-cubeagedonate.trademc.org">https://mc-cubeagedonate.trademc.org</a></br><p>
 </div>
