--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ CubeAge это качественый сервер майнкрафт, с мно
 <h2>Сервер логает!</h2>
 Проверьте установите версию 1.12.2<P>
 Если все в порядке установите OptiFine!<P>
+<iframe src="https://monitoringminecraft.ru/status-iframe1n/65.21.9.195%3A26060.png#%D0%9E%D0%BD%D0%BB%D0%B0%D0%B9%D0%BD%3A%20" frameborder="no" allowTransparency="true" height="22" scrolling="no"></iframe>
 </div>
 </div>
 <div>
