--- a/rules.html
+++ b/rules.html
@@ -62,7 +62,7 @@ a:hover{color:#0F0;cursor:pointer;text-decoration:none;}
 <p>
 <i>6. АККАУНТ</i><p>
 6.1 продавать аккаунт за реальные деньги ЗАПРЕЩЕНО<p>
-6.2 продавать за игровую валюту/за игровые постройки аккаунт с донатом выше "стараж" ЗАПРЕЩЕНО<p>
+6.2 продавать за игровую валюту/за игровые постройки аккаунт с донатом выше "страж" ЗАПРЕЩЕНО<p>
 6.3 требовать аккаунт у когото ЗАПРЕЩЕНО<p>
 </div>
 </div>
