--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ alt=""/></a><script>(function(d,s){d.getElementById("licnt7711").src=
 ((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+
 (s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
 ";h"+escape(d.title.substring(0,150))+";"+Math.random()})
-(document,screen)</script><!--/LiveInternet-->
+(document,screen)</script><!--/LiveInternet--><p>
 (c) 2021
 </div>
 </body>
