--- a/rules.html
+++ b/rules.html
@@ -70,7 +70,7 @@ a:hover{color:#0F0;cursor:pointer;text-decoration:none;}
 <a href="https://tmonitoring.com/server/cubeage1/"><img src="https://tmonitoring.com/b/47691/?i=2"/></a><p>
 <!--LiveInternet counter--><a href="https://www.liveinternet.ru/click"
 target="_blank"><img id="licnt7711" width="88" height="120" style="border:0" 
-title="LiveInternet: показано количество просмотров и посетителей"
+title="Показано количество просмотров и посетителей"
 src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7"
 alt=""/></a><script>(function(d,s){d.getElementById("licnt7711").src=
 "https://counter.yadro.ru/hit?t27.6;r"+escape(d.referrer)+
