--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ a:hover{color:#0F0;cursor:pointer;text-decoration:none;}
 <p>
 <p>
 DiamondStudio разработала больше чем 5 преложений и больше чем 2 игры для различных платформ!<p>
-По вопросу сотрудничества обращайтесь в Discord ( {coder} vlad# )<p>
+По вопросу сотрудничества обращайтесь в Discord ( {coder} vlad#0244 )<p>
 </div>
 </div>
 </body>
