--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <style>
 p {
     color: rgba(255, 255, 255, 0.671) !important;
