--- a/buy.html
+++ b/buy.html
@@ -1,3 +1,3 @@
 <script src="https://api.trademc.org/trademcapi.js"></script>
 <div id="trademc-buyform"></div>
-<script>TrademcAPI.GetBuyForm({"Shop":"1","Title":"Купить донат","Nickname":"Введите ваш никнейм","Item":"Выберите товар","Coupon":"Введите купон, если есть","Button":"Продолжить","Success_URL":"https://trademc.org","Pending_URL":"https://trademc.org","Fail_URL":"https://trademc.org","PastPlaceID":"trademc-buyform"});</script>
+<script>TrademcAPI.GetBuyForm({"Shop":"167252","Title":"Купить донат","Nickname":"Введите ваш никнейм","Item":"Выберите товар","Coupon":"Введите купон, если есть","Button":"Купить","Success_URL":"https://mc-woonworld.ml/buy_sec.html","Pending_URL":"https://mc-woonworld.ml/buy_wait.html","Fail_URL":"https://mc-woonworld.ml/buy_fail.html","PastPlaceID":"trademc-buyform"});</script>
