--- a/index.html
+++ b/index.html
@@ -873,9 +873,9 @@ window.addEventListener('load', function theseFunc() {
                 <div class="row3">
                         <center>
                                 <h2 id="title">Навигация</h2>
-                                <a href="https://wmc-woonworld.ml/"><i class="fas fa-home" style="margin-right:5px"></i>ГЛАВНАЯ</a>
-                                <a href="https://mc-woonworlddon.trademc.org/"><i class="fas fa-shopping-basket" style="margin-right:5px"></i>МАГАЗИН</a>
-                                <a href="https://mc-woonworlddon.trademc.org/rules/"><i class="fas fa-users" style="margin-right:5px"></i>ПРАВИЛА</a>
+                                <a href="https://mc-woonworld.ml/"><i class="fas fa-home" style="margin-right:5px"></i>ГЛАВНАЯ</a>
+                                <a href="https://mc-woonworld.ml/buy.html/"><i class="fas fa-shopping-basket" style="margin-right:5px"></i>МАГАЗИН</a>
+                                <a href="https://mc-woonworld.ml/rules.html/"><i class="fas fa-users" style="margin-right:5px"></i>ПРАВИЛА</a>
                         </center>
                 </div>
         </div>
