--- a/index.html
+++ b/index.html
@@ -816,9 +816,9 @@ window.addEventListener('load', function theseFunc() {
                 <li><a class="hvr-grow" href="https://mc-woonworld.ml"><i class="fas fa-home" style="margin-right:5px"></i>ГЛАВНАЯ</a></li>
                 <li><a class="hvr-grow"  target="_blank" href="https://doubleminecraft.forum2x2.ru/"><i class="fas fa-folder-open"
                                         style="margin-right:5px"></i>ФОРУМ</a></li>
-                <li><a class="hvr-grow" href="https://mc-woonworlddon.trademc.org/"><i class="fas fa-shopping-basket"
+                <li><a class="hvr-grow" href="https://mc-woonworld.ml/buy.html"><i class="fas fa-shopping-basket"
                                         style="margin-right:5px"></i>МАГАЗИН</a></li>
-                <li><a class="hvr-grow" href="https://mc-woonworlddon.trademc.org/rules/"><i class="fas fa-users" style="margin-right:5px"></i>ПРАВИЛА</a>
+                <li><a class="hvr-grow" href="https://mc-woonworld.ml/rules.html/"><i class="fas fa-users" style="margin-right:5px"></i>ПРАВИЛА</a>
                 </li>
         </ul>
         </div>
