--- a/buy.html
+++ b/buy.html
@@ -2,3 +2,4 @@
 <script src="https://api.trademc.org/trademcapi.js"></script>
 <div id="trademc-buyform"></div>
 <script>TrademcAPI.GetBuyForm({"Shop":"167252","Title":"Купить донат","Nickname":"Введите ваш никнейм","Item":"Выберите товар","Coupon":"Введите промокод, если есть","Button":"Купить","Success_URL":"https://mc-woonworld.ml/buy_sec.html","Pending_URL":"https://mc-woonworld.ml/buy_wait.html","Fail_URL":"https://mc-woonworld.ml/buy_fail.html","PastPlaceID":"trademc-buyform"});</script>
+<a href=https://mc-woonworld.ml/>НА ГЛАВНУЮ</a>
