--- a/index.html
+++ b/index.html
@@ -814,11 +814,11 @@ window.addEventListener('load', function theseFunc() {
 
         <ul class="cstnavbar">
                 <li><a class="hvr-grow" href="https://mc-woonworld.ml"><i class="fas fa-home" style="margin-right:5px"></i>ГЛАВНАЯ</a></li>
-                <li><a class="hvr-grow"  target="_blank" href="https://doubleminecraft.forum2x2.ru/"><i class="fas fa-folder-open"
+                <li><a class="hvr-grow"  target="_blank" href="https://doubleminecraft.forum2x2.ru"><i class="fas fa-folder-open"
                                         style="margin-right:5px"></i>ФОРУМ</a></li>
                 <li><a class="hvr-grow" href="https://mc-woonworld.ml/buy.html"><i class="fas fa-shopping-basket"
                                         style="margin-right:5px"></i>МАГАЗИН</a></li>
-                <li><a class="hvr-grow" href="https://mc-woonworld.ml/rules.html/"><i class="fas fa-users" style="margin-right:5px"></i>ПРАВИЛА</a>
+                <li><a class="hvr-grow" href="https://mc-woonworld.ml/rules.html"><i class="fas fa-users" style="margin-right:5px"></i>ПРАВИЛА</a>
                 </li>
         </ul>
         </div>
@@ -874,8 +874,8 @@ window.addEventListener('load', function theseFunc() {
                         <center>
                                 <h2 id="title">Навигация</h2>
                                 <a href="https://mc-woonworld.ml/"><i class="fas fa-home" style="margin-right:5px"></i>ГЛАВНАЯ</a>
-                                <a href="https://mc-woonworld.ml/buy.html/"><i class="fas fa-shopping-basket" style="margin-right:5px"></i>МАГАЗИН</a>
-                                <a href="https://mc-woonworld.ml/rules.html/"><i class="fas fa-users" style="margin-right:5px"></i>ПРАВИЛА</a>
+                                <a href="https://mc-woonworld.ml/buy.html"><i class="fas fa-shopping-basket" style="margin-right:5px"></i>МАГАЗИН</a>
+                                <a href="https://mc-woonworld.ml/rules.html"><i class="fas fa-users" style="margin-right:5px"></i>ПРАВИЛА</a>
                         </center>
                 </div>
         </div>
