--- a/buy_fail.html
+++ b/buy_fail.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h2>ОШИБКА!</h2><p>
-Произошла ошибка при покупке! <a href=https://mc-woonworld.ml/buy.html/>Повторите попытку</a>.<p>
+Произошла ошибка при покупке! <a href=https://mc-woonworld.ml/buy.html>Повторите попытку</a>.<p>
 =(<p>
 </body>
 </html>
