--- a/index.html
+++ b/index.html
@@ -804,9 +804,9 @@ window.addEventListener('load', function theseFunc() {
                                                 class="players"><i class="fas fa-spinner"></i></span><span
                                                 style="margin-left:25px;"></span></p>
                         </div>
-                        <div class="ip" data-clipboard-text="woonworld.ml:26060">
+                        <div class="ip" data-clipboard-text="woonworld.gomc.fun">
                                 <p><i class="fas fa-copy" style="margin-right:5px"></i>Адрес сервера: <span
-                                                class="serverip">woonworld.ml:26060</span>
+                                                class="serverip">woonworld.gomc.fun</span>
                                 </p>
                         </div>
                 </div>
